; ModuleID = '/home/carl/AnghaBench/gb-studio/buildTools/linux-x64/gbdk/libc/gb/extr_gprintn.c_gprintn.c'
source_filename = "/home/carl/AnghaBench/gb-studio/buildTools/linux-x64/gbdk/libc/gb/extr_gprintn.c_gprintn.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@UNSIGNED = common dso_local global i64 0, align 8
@digits = common dso_local global i8* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @gprintn(i64 %0, i64 %1, i64 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  store i64 %0, i64* %4, align 8
  store i64 %1, i64* %5, align 8
  store i64 %2, i64* %6, align 8
  %8 = load i64, i64* %4, align 8
  %9 = icmp ult i64 %8, 0
  br i1 %9, label %10, label %17

10:                                               ; preds = %3
  %11 = load i64, i64* %6, align 8
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %17

13:                                               ; preds = %10
  %14 = call i32 @wrtchr(i8 signext 45)
  %15 = load i64, i64* %4, align 8
  %16 = sub i64 0, %15
  store i64 %16, i64* %4, align 8
  br label %17

17:                                               ; preds = %13, %10, %3
  %18 = load i64, i64* %4, align 8
  %19 = load i64, i64* %5, align 8
  %20 = udiv i64 %18, %19
  store i64 %20, i64* %7, align 8
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %26

22:                                               ; preds = %17
  %23 = load i64, i64* %7, align 8
  %24 = load i64, i64* %5, align 8
  %25 = load i64, i64* @UNSIGNED, align 8
  call void @gprintn(i64 %23, i64 %24, i64 %25)
  br label %26

26:                                               ; preds = %22, %17
  %27 = load i8*, i8** @digits, align 8
  %28 = load i64, i64* %4, align 8
  %29 = load i64, i64* %5, align 8
  %30 = urem i64 %28, %29
  %31 = getelementptr inbounds i8, i8* %27, i64 %30
  %32 = load i8, i8* %31, align 1
  %33 = call i32 @wrtchr(i8 signext %32)
  ret void
}

declare dso_local i32 @wrtchr(i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
